# application/src/main/java/com/centimo/api/domain/models/LoginResult.java
@@ -1,0 +1,19 @@
+package com.centimo.api.domain.models;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class LoginResult {
+
+	private String token;
+	private String preAuthToken;
+	private boolean requires2fa;
+}
