# application/src/main/java/com/centimo/api/ports/driven/JwtPort.java
@@ -1,0 +1,12 @@
+package com.centimo.api.ports.driven;
+
+public interface JwtPort {
+
+	String generateSessionToken(String username);
+
+	String generatePreAuthToken(String username);
+
+	String validateSessionToken(String token);
+
+	String validatePreAuthToken(String token);
+}
