# driven/postgres-repository/src/main/java/com/centimo/api/database/repositories/UsuarioRepository.java
@@ -1,0 +1,11 @@
+package com.centimo.api.database.repositories;
+
+import org.springframework.data.jpa.repository.JpaRepository;
+
+import com.centimo.api.database.models.UsuarioMO;
+import java.util.Optional;
+
+public interface UsuarioRepository extends JpaRepository<UsuarioMO, String> {
+
+	Optional<UsuarioMO> findByUsername(String username);
+}
